# VIBENTO

./: .gitignore  README.md  pyproject.toml
layout_autofix/: __init__.py  __main__.py  app.py  autostart.py  detector.py  logging_setup.py  macos_app.py
scripts/: build_macos_onefile.sh
tests/: test_app.py  test_autostart.py  test_detector.py
